# Proyecto_Deteccion_Neumonia

./: .gitignore  Dockerfile  LICENSE  README.md  detector_neumonia.py  docker.dockerignore  historial.csv  main.py  pyproject.toml
src_directory/: grad_cam.py  gui.py  integrator.py  load_model.py  preprocess_img.py  read_img.py
src_directory_othermodules/: ai_logic.py  data_manager.py  gui.py  main.py
static/: styles.css
templates/: index.html
tests/: test_dtype_preprocess.py  test_load_model.py  test_preprocess.py  test_shape_preprocess.py
